# motorsport-lap-performance-analyser

./: .gitignore  README.md  pyproject.toml
Motorsports-Lap-Performance-Analyser/: .gitignore  pyproject.toml  requirements.txt
Motorsports-Lap-Performance-Analyser/configs/: monza_2025_q_ver_lec.yaml
Motorsports-Lap-Performance-Analyser/src/mlpa/: segmentation.py
Motorsports-Lap-Performance-Analyser/tests/: test_alignment.py  test_segmentation.py
configs/: default.yaml  monza_2025_q_ver_lec.yaml  monza_2025_q_ver_single.yaml  silverstone_2025_q_nor_pia.yaml
src/mlpa/: __init__.py  alignment.py  attribution.py  calibration.py  envelope.py  envelope_pipeline.py  envelope_plotting.py  features.py  filtering.py  io.py  main.py  ml_models.py  plotting.py  reporting.py  single_lap.py  telemetry.py  track_model.py  utils.py  vehicle_model.py
tests/: test_attribution.py  test_features.py  test_filtering.py  test_ml_models.py  test_single_lap.py  test_vehicle_model.py
