[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlpa"
version = "0.2.1"
description = "Motorsport Lap Performance Analyzer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastf1>=3.8.1",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyyaml>=6.0",
    "scikit-learn>=1.5",
    "scipy>=1.13"
]

[project.scripts]
mlpa = "mlpa.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
